Fixed styling for every page; header is no longer hidden behind navbar

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,7 +1,6 @@
 .users.index {
-  margin-top: 60px;
   margin-bottom: 250px;
-  
+
   ul {
     list-style: none;
 
